Fri May 19 00:01:36 2000  George Lebl <jirka@5z.com>

	* gnome-config.c: add #include <ctype.h> for tolower

2000-05-18  Miguel de Icaza  <miguel@gnu.org>

	* gnome-config.c (gnome_config_iterator_next): Implement as
	documented.  

2000-05-09  Jacob Berkman  <jacob@helixcode.com>

	* gnome-dentry.c (gnome_desktop_entry_launch_with_args): fix bug #10647

	STOOPID STOOPID STOOPID STOOPID STOOPID STOOPID STOOPID

2000-05-06  Miguel de Icaza  <miguel@helixcode.com>

	* gnome-dentry.c (gnome_desktop_entry_launch_with_args): optimize.

Sat May 06 16:46:13 2000  George Lebl <jirka@5z.com>

	* gnome-config.c (_gnome_config_get_float_with_default)
	  (_gnome_config_set_float): setlocae for LC_NUMERIC to "C" and
	  then back to original locale when reading and writing floats
	  so that we can read/write floats over different locales

	* gnome-score.c (gnome_get_score_file_name) (log_score): 
	  The same as above.  Fixes bugs #10404, #10257

2000-05-04  Jacob Berkman  <jacob@helixcode.com>

	* gnomelib-init.c (gnomelib_option_cb): patch from Red Hat RPMs to
	not start esd if it is disabled (changed to default to true, since
	that is what the sound capplet does)

	* gnome-dentry.c (gnome_desktop_entry_launch_with_args): if xalf is
	installed and GNOME_USE_XALF is in the environment, use it to start
	apps.
	(gnome_desktop_entry_launch_with_args): export the icon in the dentry
	if we aren't a KDE .desktop and X-GNOME-SetIcon is true

Sun Apr 30 22:44:55 2000  George Lebl <jirka@5z.com>

	* gnome-config.c: when getting a bool, accept numbers as well, this
	  is a patch from HEAD.

2000-04-05  Miguel de Icaza  <miguel@gnu.org>

	* parse-path.cP (parse_path): Invert the private/regular.  Thank
	god for the test suite.

2000-04-03  Miguel de Icaza  <miguel@gnu.org>

	* gnome-fileconvert.c (gfc_read_FileConverters): Do not depend on
	initialization sequence to run.

	* parse-path.cP (parse_path): Do not depend on the initialization sequence
